Moved into projects folder for cleanliness

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <h1>All The Odin Projects Completed so Far:</h1>
     <ul>
       <li>
-        <a href="odin-links-and-images/index.html">odin-links-and-images</a>
+        <a href="projects/odin-links-and-images/index.html"
+          >odin-links-and-images</a
+        >
       </li>
       <li>
-        <a href="odin-recipes/index.html">odin-recipes</a>
+        <a href="projects/odin-recipes/index.html">odin-recipes</a>
       </li>
     </ul>
   </body>
