--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <h1>All The Odin Projects Completed so Far:</h1>
     <ul>
       <li>
-        <a href="projects/odin-links-and-images/index.html"
+        <a href="./projects/odin-links-and-images/index.html"
           >odin-links-and-images</a
         >
       </li>
       <li>
-        <a href="projects/odin-recipes/index.html">odin-recipes</a>
+        <a href="./projects/odin-recipes/index.html">odin-recipes</a>
+      </li>
+      <li>
+        <a href="./projects/css-intro/index.html">css-intro</a>
       </li>
     </ul>
   </body>
