--- a/projects/odin-recipes/index.html
+++ b/projects/odin-recipes/index.html
@@ -9,13 +9,13 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="recipes/unbelievable-chicken.html">Unbelievable Chicken</a>
+        <a href="./recipes/unbelievable-chicken.html">Unbelievable Chicken</a>
       </li>
       <li>
-        <a href="recipes/taco-casseroles.html">Taco Casserole</a>
+        <a href="./recipes/taco-casseroles.html">Taco Casserole</a>
       </li>
       <li>
-        <a href="recipes/shrimp-stir-fry.html">Shrimp Stir Fry</a>
+        <a href="./recipes/shrimp-stir-fry.html">Shrimp Stir Fry</a>
       </li>
     </ul>
   </body>
