Finished cascading lesson CSS

--- a/projects/css-intro/index.html
+++ b/projects/css-intro/index.html
@@ -6,6 +6,7 @@
     <title>CSS Practice</title>
   </head>
   <body>
+    <h1>CSS Practice</h1>
     <ul>
       <li><a href="./01-css-methods/index.html">01-css-methods</a></li>
       <li>
@@ -21,6 +22,12 @@
         <a href="./05-descendant-combination/index.html"
           >05-descendant-combination</a
         >
+      </li>
+    </ul>
+    <h2>Cascading</h2>
+    <ul>
+      <li>
+        <a href="./cascading/01-cascade-fix/index.html">01-cascade-fix</a>
       </li>
     </ul>
   </body>
