Finished box, inline and block lessons

--- a/projects/css-intro/index.html
+++ b/projects/css-intro/index.html
@@ -30,5 +30,18 @@
         <a href="./cascading/01-cascade-fix/index.html">01-cascade-fix</a>
       </li>
     </ul>
+    <h2>Margin and Padding</h2>
+    <ul>
+      <li>
+        <a href="./block-and-inline/01-margin-and-padding-1/index.html"
+          >01-margin-and-padding-1</a
+        >
+      </li>
+      <li>
+        <a href="./block-and-inline/02-margin-and-padding-2/index.html"
+          >02-margin-and-padding-2</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
