--- a/projects/css-intro/index.html
+++ b/projects/css-intro/index.html
@@ -43,5 +43,20 @@
         >
       </li>
     </ul>
+    <h2>Flex</h2>
+    <ul>
+      <li>
+        <a href="./flex/01-flex-center/index.html">01-flex-center</a>
+      </li>
+      <li>
+        <a href="./flex/02-flex-header/index.html">02-flex-header</a>
+      </li>
+      <li>
+        <a href="./flex/03-flex-header-2/index.html">03-flex-header-2</a>
+      </li>
+      <li>
+        <a href="./flex/04-flex-information/index.html">04-flex-information</a>
+      </li>
+    </ul>
   </body>
 </html>
