Finished with all flex projects

--- a/projects/css-intro/index.html
+++ b/projects/css-intro/index.html
@@ -57,6 +57,15 @@
       <li>
         <a href="./flex/04-flex-information/index.html">04-flex-information</a>
       </li>
+      <li>
+        <a href="./flex/05-flex-modal/index.html">05-flex-modal</a>
+      </li>
+      <li>
+        <a href="./flex/06-flex-layout/index.html">06-flex-layout</a>
+      </li>
+      <li>
+        <a href="./flex/07-flex-layout-2/index.html">07-flex-layout-2</a>
+      </li>
     </ul>
   </body>
 </html>
