Finished landing page project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <li>
         <a href="./projects/css-intro/index.html">css-intro</a>
       </li>
+      <li>
+        <a href="./projects/landing-page/index.html">landing-page</a>
+      </li>
     </ul>
   </body>
 </html>
