--- a/projects/landing-page/styles.html
+++ b/projects/landing-page/styles.html
@@ -39,6 +39,7 @@
       <p style="font-weight: 700; font-size: 20px">
         Font Style: Italic, Font Size: 42px
       </p>
+      <a href="index.html">Home</a>
     </div>
   </body>
 </html>
