Finished rock paper scissors (its aight)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       <li>
         <a href="./projects/landing-page/index.html">landing-page</a>
       </li>
+      <li>
+        <a href="projects/js-intro/index.html">js-intro</a>
+      </li>
+      <li>
+        <a href="projects/rock-paper-scissors/index.html"
+          >rock-paper-scissors</a
+        >
+      </li>
     </ul>
   </body>
 </html>
