--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           >rock-paper-scissors</a
         >
       </li>
+      <li>
+        <a href="projects/etch-a-sketch/index.html">etch-a-sketch</a>
+      </li>
     </ul>
   </body>
 </html>
