Added grid using js, and mouse hover to draw event

--- a/projects/etch-a-sketch/index.html
+++ b/projects/etch-a-sketch/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Etch A Sketch</title>
+    <!-- apparently I have to link the js before css to style the newly created DOM elements. -->
+    <script src="script.js" defer></script>
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="gridContainer" id="gridContainer"></div>
+  </body>
 </html>
