Added a resize function to resize the grid with maximum of 100x100

--- a/projects/etch-a-sketch/index.html
+++ b/projects/etch-a-sketch/index.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
+    <button id="resizeButton">Resize</button>
     <div class="gridContainer" id="gridContainer"></div>
   </body>
 </html>
