Finished boilerplate for calculator project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>All The Odin Projects Completed so Far:</h1>
+    <h2>Foundations</h2>
     <ul>
       <li>
         <a href="./projects/odin-links-and-images/index.html"
@@ -32,6 +33,9 @@
       </li>
       <li>
         <a href="projects/etch-a-sketch/index.html">etch-a-sketch</a>
+      </li>
+      <li>
+        <a href="projects/calculator/index.html">calculator</a>
       </li>
     </ul>
   </body>
