--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -7,5 +7,39 @@
     <script src="script.js" defer></script>
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="display" id="display">
+        <p id="result">0</p>
+      </div>
+      <div class="row1">
+        <button id="clear">AC</button>
+        <button id="power">^</button>
+        <button id="modulus">%</button>
+        <button id="divide">&div;</button>
+      </div>
+      <div class="row2">
+        <button id="7">7</button>
+        <button id="8">8</button>
+        <button id="9">9</button>
+        <button id="multiply">x</button>
+      </div>
+      <div class="row3">
+        <button id="4">4</button>
+        <button id="5">5</button>
+        <button id="6">6</button>
+        <button id="subtract">-</button>
+      </div>
+      <div class="row4">
+        <button id="1">1</button>
+        <button id="2">2</button>
+        <button id="3">3</button>
+        <button id="add">+</button>
+      </div>
+      <div class="row5">
+        <button id="0">0</button>
+        <button id="equals">=</button>
+      </div>
+    </div>
+  </body>
 </html>
