Added boilerplate code for sign up form

--- a/index.html
+++ b/index.html
@@ -39,4 +39,11 @@
       </li>
     </ul>
   </body>
+  <h2>Intermediate HTML & CSS</h2>
+
+  <ul>
+    <li>
+      <a href="projects/sign-up-form/index.html"></a>
+    </li>
+  </ul>
 </html>
