Not the best, finished left image side

--- a/projects/sign-up-form/index.html
+++ b/projects/sign-up-form/index.html
@@ -18,11 +18,20 @@
           </div>
           <div class="image-header-text">ODIN</div>
         </div>
+        <div></div>
         <div class="image-footer">
           Photo by
-          <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+          <a
+            href="https://unsplash.com/@haliewestphoto"
+            target="_blank"
+            rel="noreferrer"
+            >Halie West</a
+          >
+          on
           <a
             href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA"
+            target="_blank"
+            rel="noreferrer"
             >Unsplash</a
           >
         </div>
