Added dark mode (commented out)

--- a/projects/sign-up-form/index.html
+++ b/projects/sign-up-form/index.html
@@ -46,7 +46,10 @@
           <p>You <em>know</em> you want to.</p>
         </div>
         <div class="form">
-          <p style="font-weight: 600; font-size: 1.5em; margin-bottom: 1em">
+          <p
+            style="font-weight: 600; font-size: 1.5em; margin-bottom: 1em"
+            class="header2"
+          >
             Let's do this!
           </p>
           <form action="#" method="get">
@@ -124,6 +127,10 @@
               <button type="submit">Create Account</button>
             </div>
           </form>
+          <p>
+            Already have an account?
+            <a href="#" id="login">Log in</a>
+          </p>
         </div>
       </div>
     </div>
