Forgot to add the text content for sign up form in index

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <ul>
     <li>
-      <a href="projects/sign-up-form/index.html"></a>
+      <a href="projects/sign-up-form/index.html">Sign Up Form</a>
     </li>
   </ul>
 </html>
