Finished first intermediate exercise resizing was hard till I just used %

--- a/index.html
+++ b/index.html
@@ -45,5 +45,10 @@
     <li>
       <a href="projects/sign-up-form/index.html">Sign Up Form</a>
     </li>
+    <li>
+      <a href="projects/intermediate-html-css/index.html"
+        >intermediate-html-css</a
+      >
+    </li>
   </ul>
 </html>
