Finished admin dashboard boilerplate

--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
         >intermediate-html-css</a
       >
     </li>
+    <li>
+      <a href="projects/admin-dashboard/index.html">admin-dashboard</a>
+    </li>
   </ul>
 </html>
