--- a/projects/admin-dashboard/index.html
+++ b/projects/admin-dashboard/index.html
@@ -49,16 +49,63 @@
             </div>
         </div>
         <!--Sidebar end-->
-        <!--Header-->
-        <div class="header">
-            <div class="search">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
-                <label for="search"></label>
-                <input type="text" name="search" id="search">
+        <div class="right">
+            <!--header-->
+            <div class="header">
+                <div class="search">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
+                    <label for="search"></label>
+                    <input type="text" name="search" id="search">
+                </div>
+                <div class="profile">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>face-man-profile</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,8.39C13.57,9.4 15.42,10 17.42,10C18.2,10 18.95,9.91 19.67,9.74C19.88,10.45 20,11.21 20,12C20,16.41 16.41,20 12,20C9,20 6.39,18.34 5,15.89L6.75,14V13A1.25,1.25 0 0,1 8,11.75A1.25,1.25 0 0,1 9.25,13V14H12M16,11.75A1.25,1.25 0 0,0 14.75,13A1.25,1.25 0 0,0 16,14.25A1.25,1.25 0 0,0 17.25,13A1.25,1.25 0 0,0 16,11.75Z" /></svg>
+                    <p>User</p>
+                </div>
+                <div class="welcome">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>face-man-profile</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,8.39C13.57,9.4 15.42,10 17.42,10C18.2,10 18.95,9.91 19.67,9.74C19.88,10.45 20,11.21 20,12C20,16.41 16.41,20 12,20C9,20 6.39,18.34 5,15.89L6.75,14V13A1.25,1.25 0 0,1 8,11.75A1.25,1.25 0 0,1 9.25,13V14H12M16,11.75A1.25,1.25 0 0,0 14.75,13A1.25,1.25 0 0,0 16,14.25A1.25,1.25 0 0,0 17.25,13A1.25,1.25 0 0,0 16,11.75Z" /></svg>
+                    <div class="welcome-message">
+                        <p>Hi there,</p>
+                        <h1>User (@User)</h1>
+                    </div>
+                </div>
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
-        </div>
-        <div class="dashboard">
-
+            <div class="dashboard">
+                <div class="projects">
+                    <p>Your Projects</p>
+                    <div class="card">
+                        <div class="text">
+                            <h1>Super Cool Project</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora unde qui reiciendis voluptatum quibusdam, odio atque illum a sapiente amet.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h1>Less cool Project</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolore libero necessitatibus minima adipisci quae cum quidem magnam quasi aperiam.</p>
+                    </div>
+                    <div class="card">
+                        <h1>Impossible App</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus corporis quibusdam nostrum voluptatem qui provident voluptas totam cum nulla dolores?</p>
+                    </div>
+                    <div class="card">
+                        <h1>Easy Peasy App</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, sed nam voluptates alias dolore nihil placeat officia porro tenetur quod.</p>
+                    </div>
+                    <div class="card">
+                        <h1>Ad Blocker</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, numquam natus iste obcaecati repellendus optio dolore sapiente modi praesentium quam?</p>
+                    </div>
+                    <div class="card">
+                        <h1>Money Maker</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem totam aliquam harum atque quod. Optio nihil vel dolorem quisquam voluptate?</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
