--- a/projects/admin-dashboard/index.html
+++ b/projects/admin-dashboard/index.html
@@ -225,8 +225,54 @@
             </div>
           </div>
           <p id="announcements">Announcements</p>
-          <div class="announcement">
-            
+          <div class="dashboard-right-wrapper">
+            <div class="announcements">
+              <div class="announcement-card">
+                <h1>Site Maintenance</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt velit aspernatur delectus pariatur repellendus necessitatibus doloribus sapiente quasi sed saepe?</p>
+              </div>
+              <div class="seperator"></div>
+              <div class="announcement-card">
+                <h1>Community Share Day</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, facere.</p>
+              </div>
+              <div class="seperator"></div>
+              <div class="announcement-card">
+                <h1>Updated Privacy Policy</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus dignissimos incidunt voluptatibus beatae facere aut?</p>
+              </div>
+            </div>
+            <p id="trending">Trending</p>
+            <div class="trending">
+              <div class="trending-card">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                <div class="trending-text">
+                  <p class="handle">@tegan</p>
+                  <p class="desc">World Peace Builder</p>
+                </div>
+              </div>
+              <div class="trending-card">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                <div class="trending-text">
+                  <p class="handle">@morgan</p>
+                  <p class="desc">Super Cool Project</p>
+                </div>
+              </div>
+              <div class="trending-card">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                <div class="trending-text">
+                  <p class="handle">@kendall</p>
+                  <p class="desc">Life Changing App</p>
+                </div>
+              </div>
+              <div class="trending-card">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>account-circle</title><path d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z" /></svg>
+                <div class="trending-text">
+                  <p class="handle">@alex</p>
+                  <p class="desc">No Traffic Maker</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
