Added books with unique ids, user-added books with name, author, release date, etc.

--- a/index.html
+++ b/index.html
@@ -53,5 +53,12 @@
     <li>
       <a href="projects/admin-dashboard/index.html">admin-dashboard</a>
     </li>
+    <li></li>
+  </ul>
+  <h2>Javascript</h2>
+  <ul>
+    <li>
+      <a href="projects/javascript/library/index.html">library</a>
+    </li>
   </ul>
 </html>
