--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
     <li>
       <a href="projects/admin-dashboard/index.html">admin-dashboard</a>
     </li>
-    <li></li>
   </ul>
   <h2>Javascript</h2>
   <ul>
     <li>
       <a href="projects/javascript/library/index.html">library</a>
     </li>
+	  <li>
+		  <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
+	  </li>
   </ul>
 </html>
