Finished tic-tac-toe grid

--- a/projects/javascript/tic-tac-toe/index.html
+++ b/projects/javascript/tic-tac-toe/index.html
@@ -19,7 +19,7 @@
 				<button id="marker-o">O</button>
 			</div>
 		</div>
-		<div class="game" id="game-container" display="none">
+		<div class="game" id="game-container" style="display: none;">
 
 		</div>
 	</div>
