Added Home HTML using DOM and webpack/ESM

--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@
 	  <li>
 		  <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
 	  </li>
+	  <li>
+		  <!-- TODO: CHANGE THE HREF LINK -->
+		  <a href="#">restaurant-page</a>
+	  </li>
   </ul>
 </html>
