--- a/projects/javascript/restaurant-page/src/template.html
+++ b/projects/javascript/restaurant-page/src/template.html
@@ -14,6 +14,8 @@
 			<button class="nav-button">About</button>
 		</nav>
 	</header>
-	<div id="content"></div>
+	<div class="content-container">
+		<div id="content"></div>
+	</div>
 </body>
 </html>
