--- a/projects/javascript/restaurant-page/src/template.html
+++ b/projects/javascript/restaurant-page/src/template.html
@@ -10,8 +10,8 @@
 	<header>
 		<nav>
 			<button class="nav-button" id="home">Home</button>
-			<button class="nav-button">Menu</button>
-			<button class="nav-button">About</button>
+			<button class="nav-button" id="menu">Menu</button>
+			<button class="nav-button" id="about">About</button>
 		</nav>
 	</header>
 	<div class="content-container">
