Forgot to add link to restaurant page

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 		  <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
 	  </li>
 	  <li>
-		  <!-- TODO: CHANGE THE HREF LINK -->
-		  <a href="#">restaurant-page</a>
+		  <a href="./projects/javascript/restaurant-page/dist/index.html">restaurant-page</a>
 	  </li>
   </ul>
 </html>
