--- a/projects/javascript/todolist/src/template.html
+++ b/projects/javascript/todolist/src/template.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar"></div>
-      <div class="content"></div>
+      <div id="sidebar"></div>
+      <div id="content"></div>
     </div>
   </body>
 </html>
