Added some local storage and a drop down menu for projects. Added the grid for todo items. TODO: store an array of project names as projects

--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
     <li>
       <a href="projects/javascript/library/index.html">library</a>
     </li>
-	  <li>
-		  <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
-	  </li>
-	  <li>
-		  <a href="./projects/javascript/restaurant-page/dist/index.html">restaurant-page</a>
-	  </li>
+    <li>
+      <a href="projects/javascript/tic-tac-toe/index.html">tic-tac-toe</a>
+    </li>
+    <li>
+      <a href="./projects/javascript/restaurant-page/dist/index.html"
+        >restaurant-page</a
+      >
+    </li>
+    <li>
+      <!--TODO:CHANGE TO DIST FOR PRODUCTION-->
+      <a href="./projects/javascript/todolist/src/template.html">todo-list</a>
+    </li>
   </ul>
 </html>
