--- a/projects/javascript/todolist/src/template.html
+++ b/projects/javascript/todolist/src/template.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div id="sidebar"></div>
-      <div id="content"></div>
+      <div id="content"><div id="todo-list"></div></div>
     </div>
   </body>
 </html>
