--- a/projects/intermediate-html-css/index.html
+++ b/projects/intermediate-html-css/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li>
-            <a href="./01-basic-holy-grail/index.html">01-basic-holy-grail</a>
-        </li>
-        <li>
-            <a href="./02-responsive-holy-grail/index.html">02-responsive-holy-grail</a>
-        </li>
+      <li>
+        <a href="./01-basic-holy-grail/index.html">01-basic-holy-grail</a>
+      </li>
+      <li>
+        <a href="./02-responsive-holy-grail/index.html"
+          >02-responsive-holy-grail</a
+        >
+      </li>
     </ul>
-</body>
+  </body>
 </html>
