Added html to view practice lessons

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
   <h2>Javascript</h2>
   <ul>
     <li>
+      <a href="./practice/practice.html">Practice Section</a>
+    </li>
+    <li>
       <a href="projects/javascript/library/index.html">library</a>
     </li>
     <li>
