--- a/practice/webpack-practice/src/template.html
+++ b/practice/webpack-practice/src/template.html
@@ -6,7 +6,7 @@
     <title>Test</title>
   </head>
   <body>
-    <h1>Test</h1>
+    <h1>Test (This was made with webpack)</h1>
     <img
       src="https://plus.unsplash.com/premium_photo-1664474619075-644dd191935f?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8aW1hZ2V8ZW58MHx8MHx8fDA%3D"
       alt="woman taking a picture with a camera pointed at you"
