--- a/practice/dropdown-practice/src/index.html
+++ b/practice/dropdown-practice/src/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dropdown-practice</title>
     <script src="./index.js" type="module" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>This was made without form select element!</h1>
-</body>
+  </body>
 </html>
