--- a/practice/form-validity/index.html
+++ b/practice/form-validity/index.html
@@ -12,7 +12,7 @@
     <form novalidate id="form">
       <label for="email">
         Email:
-        <input type="email" name="email" id="email" required/>
+        <input type="email" name="email" id="email" required />
       </label>
       <label for="country">
         Country:
@@ -280,11 +280,16 @@
       </label>
       <label for="password">
         Password:
-        <input type="password" name="password" id="password" required/>
+        <input type="password" name="password" id="password" required />
       </label>
       <label for="confirm-password">
         Confirm Password:
-        <input type="password" name="confirm-password" id="confirm-password" required/>
+        <input
+          type="password"
+          name="confirm-password"
+          id="confirm-password"
+          required
+        />
       </label>
       <button type="submit">Submit</button>
     </form>
