--- a/practice/image-carousel/src/index.html
+++ b/practice/image-carousel/src/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./index.js" type="module" defer></script>
     <title>Image Carousel</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
