--- a/index.html
+++ b/index.html
@@ -73,5 +73,10 @@
     <li>
       <a href="./projects/javascript/todolist/dist/index.html">todo-list</a>
     </li>
+    <li>
+      <a href="./projects/javascript/weather-api/dist/index.html"
+        >weather-api</a
+      >
+    </li>
   </ul>
 </html>
