Finished styling. and the project, I think

--- a/projects/javascript/weather-api/src/template.html
+++ b/projects/javascript/weather-api/src/template.html
@@ -6,6 +6,11 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container" id="container"></div>
+    <div class="container" id="container">
+      <h1>Minimalist Weather App</h1>
+    </div>
+    <div class="footer">
+      <p>haha grabbed your ip (P.S. don't try this on mobile=)</p>
+    </div>
   </body>
 </html>
