Added form for location input for weather

--- a/projects/javascript/weather-api/src/template.html
+++ b/projects/javascript/weather-api/src/template.html
@@ -8,6 +8,9 @@
   <body>
     <div class="container" id="container">
       <h1>Minimalist Weather App</h1>
+      <label for="location">Location:</label>
+      <input type="text" name="location" id="location" required />
+      <button type="button" id="submit-button">Submit</button>
     </div>
     <div class="footer">
       <p>haha grabbed your ip (P.S. don't try this on mobile=)</p>
