Forgot to add recursion to index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -77,6 +77,9 @@
       <a href="./projects/javascript/weather-api/dist/index.html"
         >weather-api</a
       >
+    </li>
+    <li>
+      <a href="./projects/javascript/recursion/index.html">recursion</a>
     </li>
   </ul>
 </html>
