Setup linked lists project

--- a/index.html
+++ b/index.html
@@ -81,5 +81,8 @@
     <li>
       <a href="./projects/javascript/recursion/index.html">recursion</a>
     </li>
+    <li>
+      <a href="./projects/javascript/linked-lists/index.html">linked-lists</a>
+    </li>
   </ul>
 </html>
