--- a/projects/javascript/linked-lists/index.html
+++ b/projects/javascript/linked-lists/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fibonacci</title>
-    <script src="fibonacci.js"></script>
+    <title>Linked Lists</title>
+    <script src="linkedList.js"></script>
   </head>
   <body>
     <h1>Please open the dev tools</h1>
     <h1>And view the source code, and the console output.</h1>
-    <a href="index.html">Back</a>
+    <a href="../../../index.html">Back</a>
   </body>
 </html>
