--- a/projects/javascript/recursion/mergeSort.html
+++ b/projects/javascript/recursion/mergeSort.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,8 +7,8 @@
     <script src="mergeSort.js"></script>
   </head>
   <body>
-    <h1>Please view the dev tools</h1>
-    <h1>And the source code, and the console output.</h1>
+    <h1>Please open the dev tools</h1>
+    <h1>And view the source code, and the console output.</h1>
     <a href="index.html">Back</a>
   </body>
 </html>
