TODO: Continue Hashmap

--- a/index.html
+++ b/index.html
@@ -84,5 +84,8 @@
     <li>
       <a href="./projects/javascript/linked-lists/index.html">linked-lists</a>
     </li>
+    <li>
+      <a href="./projects/javascript/hashmap/hashmap.js">hashmap</a>
+    </li>
   </ul>
 </html>
